Update version. change notification class.

--- a/data/extensions.json
+++ b/data/extensions.json
@@ -1,7 +1,7 @@
 {
     "core": {
         "AdminNotifications": {
-            "antispambycleantalk": "IPS\\antispambycleantalk\\extensions\\core\\AdminNotifications\\antispambycleantalk"
+            "antispambycleantalk": "IPS\\antispambycleantalk\\extensions\\core\\AdminNotifications\\notification"
         },
         "Uninstall": {
             "antispambycleantalk": "IPS\\antispambycleantalk\\extensions\\core\\Uninstall\\antispambycleantalk"
