--- a/data/extensions.json
+++ b/data/extensions.json
@@ -1,10 +1,10 @@
 {
     "core": {
         "AdminNotifications": {
-            "antispambycleantalk": "IPS\\antispambycleantalk\\extensions\\core\\AdminNotifications\\notification"
+            "antispambycleantalk": "IPS\\antispambycleantalk\\extensions\\core\\AdminNotifications\\Notification"
         },
         "Uninstall": {
-            "antispambycleantalk": "IPS\\antispambycleantalk\\extensions\\core\\Uninstall\\antispambycleantalk"
+            "antispambycleantalk": "IPS\\antispambycleantalk\\extensions\\core\\Uninstall\\Antispambycleantalk"
         }
     }
 }
