New. Common. Errors handling via ApbctIPS4/Helper.

--- a/data/settings.json
+++ b/data/settings.json
@@ -46,5 +46,9 @@
     {
         "key": "ct_work_url",
         "default": "0"
+    },
+    {
+        "key": "ct_errors",
+        "default": ""
     }
 ]
