Fix. Cron. Fixed cron work process.

--- a/data/settings.json
+++ b/data/settings.json
@@ -50,5 +50,9 @@
     {
         "key": "ct_errors",
         "default": ""
+    },
+    {
+        "key": "cleantalk_cron",
+        "default": ""
     }
 ]
